--- a/src/index.css
+++ b/src/index.css
@@ -65,3 +65,12 @@ svg {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+
+
+.test {
+  background-color: beige;
+  padding: 20px 50px;
+  margin-bottom: 50px;
+  font-size: larger;
+}
